manifest/notification/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-notification
  namespace: apps
spec:
  selector:
    matchLabels:
      app: chat-app-notification

  strategy:
    type: RollingUpdate

  template:
    metadata:
      labels:
        app: chat-app-notification
    spec:
      containers:
        - name: chat-app-notification
          image: cyrildavif/chat_app_notification:e13dca6
          resources:
            limits:
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi

          ports:
            - containerPort: 8082
