manifest/notification/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-notification-svc
spec:
  selector:
    app: chat-app-notification
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
  type: NodePort
